compiler-core/src/parse/snapshots/gleam_core__parse__tests__non_module_level_function_with_a_name.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  fn my() { 1 }\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:6
  │
3 │   fn my() { 1 }
  │      ^^ I was not expecting this

Found a name, expected one of: 
- `(`
Hint: Only module-level functions can be named.
